# hexray

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_INTEGRATION.md  README.md  UNREACHABLE_BLOCKS_PATCH.md  a.out  deny.toml  ls  nfsd.ko  unreachable_block_removal.rs
crates/hexray/: Cargo.toml
crates/hexray-analysis/: Cargo.toml
crates/hexray-analysis/benches/: analysis.rs
crates/hexray-analysis/src/: analysis_cache.rs  callgraph.rs  cfg_builder.rs  class_reconstruction.rs  cpp_special.rs  devirtualization.rs  exception_handling.rs  function_finder.rs  incremental.rs  indirect_calls.rs  lib.rs  noreturn.rs  output.rs  parallel.rs  project.rs  rtti.rs  stack_canary.rs  strings.rs  symbol_names.rs  vtable.rs  xrefs.rs
crates/hexray-analysis/src/dataflow/: const_prop.rs  def_use.rs  liveness.rs  mod.rs  queries.rs  reaching_defs.rs
crates/hexray-analysis/src/decompiler/: abi.rs  arch_patterns.rs  array_detection.rs  benchmark.rs  comparison.rs  config.rs  constant_propagation.rs  coroutine.rs  coroutine_cfg.rs  cse.rs  dead_store.rs  emitter.rs  expression.rs  expression.rs.backup2  expression.rs.bak  expression_register_fix.txt  float_patterns.rs  for_loop_detection.rs  inline_asm_filter.rs  interprocedural.rs  irreducible_cfg.rs  linked_list.rs  loop_canonicalization.rs  loop_condition_analysis.rs  loop_invariant.rs  loop_pattern_detection.rs  memset_idiom.rs  mod.rs  naming.rs  quality_metrics.rs  riscv_vector.rs  short_circuit.rs  signature.rs  stack_struct_binding.rs  string_patterns.rs  struct_inference.rs  structurer.rs  switch_recovery.rs  type_propagation.rs  variable_naming.rs
crates/hexray-analysis/src/output/: dot.rs  html.rs  json.rs
crates/hexray-analysis/src/ssa/: builder.rs  mod.rs  optimize.rs  types.rs
crates/hexray-analysis/tests/: control_flow_quality_smoke.rs  dead_code_smoke.rs  loop_quality_smoke.rs  proptest_cfg.proptest-regressions  proptest_cfg.rs  proptest_types.proptest-regressions  proptest_types.rs  signature_quality_smoke.rs  type_quality_smoke.rs  variable_naming_smoke.rs
crates/hexray-core/: Cargo.toml
crates/hexray-core/src/: arch.rs  basic_block.rs  cfg.rs  error.rs  instruction.rs  lib.rs  operand.rs  output.rs  register.rs  symbol.rs
crates/hexray-demangle/: Cargo.toml
crates/hexray-demangle/src/: lib.rs
crates/hexray-demangle/tests/: proptest_demangle.rs
crates/hexray-disasm/: Cargo.toml
crates/hexray-disasm/benches/: disassembly.rs
crates/hexray-disasm/src/: error.rs  lib.rs  traits.rs
crates/hexray-disasm/tests/: proptest_amdgpu.rs  proptest_decoder.rs  swarm_amdgpu.rs
crates/hexray-emulate/: Cargo.toml
crates/hexray-emulate/src/: executor.rs  flags.rs  lib.rs  memory.rs  simulation.rs  state.rs  value.rs  x86_64.rs
crates/hexray-emulate/tests/: proptest_simulation.rs
crates/hexray-formats/: Cargo.toml
crates/hexray-formats/src/: ar.rs  error.rs  lib.rs  traits.rs
crates/hexray-formats/src/pe/: mod.rs  (+4 more)
crates/hexray-formats/tests/: cuda_corpus.rs  cuda_fault_injection.rs  hip_bundle.rs  proptest_formats.rs  scale_kinfo_corpus.rs  soak_regressions.rs
crates/hexray-signatures/: Cargo.toml
crates/hexray-signatures/src/: database.rs  lib.rs  matcher.rs  pattern.rs  signature.rs
crates/hexray-signatures/tests/: proptest_signatures.rs
crates/hexray-types/: Cargo.toml
crates/hexray-types/src/: constants.rs  database.rs  lib.rs  parser.rs  types.rs
crates/hexray-types/tests/: proptest_parser.rs
crates/hexray/examples/: test_type_inference.rs
crates/hexray/src/: main.rs  session.rs
crates/hexray/tests/: amdgpu_differential_gate.rs  cli_tests.rs  cuda_sass_match.rs  decompiler_regression.rs  differential_tests.rs  integration_tests.rs  proptest_swarm_decompiler.rs  scale_lang_cmp.rs  snapshot_tests.rs  system_binary_tests.rs
fuzz/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  run-fuzzers.sh
fuzz/artifacts/elf_parser/: crash-fed79a2cde3970164404e4b152d73bd3d11c5d8e  slow-unit-05a1e5349dab7b9ac11ab9c97a3b6fddbdb085b1
fuzz/artifacts/elf_structured/: slow-unit-527ce38bfcd5ffb40989bc86fa25a7a005d0cada  slow-unit-a9a9b0a40e78e6b335bd501145be76e8e1586dee  slow-unit-bc3998333bea889deb9facbafdba40dd992253c8  slow-unit-fade0c7e11d57bbf87db76f5f57d396d76a8365c
fuzz/artifacts/macho_parser/: crash-45291335368d2a263e1889b9e1afcd048f26b4da  crash-4a8d2d7ffc318cf7a0c4b5449d342ed9d3d462b2  crash-b28f8d2896ea91153800ff7184a89b926f47e345  crash-ba828b557eed6bcef3c50a734120816c63db7fc3  crash-c0b682fdd392a23f0540f78581fb59ddc5059116  crash-c7e278b24dc804b9f8c028a607ced7393ca5c659
fuzz/artifacts/macho_structured/: slow-unit-63bc343a156381b7c3eb22f98a577c81960548d2  slow-unit-7632c8ba877c0fc3ab3b32d4bc11e03a857024e5  slow-unit-ca99c6362b8fc0494f62168ffb86ae1517352ced
fuzz/corpus/decompiler/: oom-cmov-self-conditional-regression  oom-idiv-xor-expr-blowup-regression  oom-sub-register-compound-broadcast-regression  oom-sub-register-self-update-regression  oom-substitute-vars-result-cap-regression  regression-crash-e49d16e72861b8690b193c40432e0e7cdde78dd2  shift-overflow-array-detect-regression  shift-overflow-const-fold-regression-1e1e6f9a  shift-overflow-const-fold-regression-39ea73bc  shift-overflow-const-fold-regression-ce9929d3  shift-overflow-const-fold-regression-ea1e3902
fuzz/corpus/dwarf_parser/: regression-crash-421c5cff6280d257dfb7e2fd7c6f943570caf52f
fuzz/corpus/elf_structured/: soak-2026-06-05-oom-bounded-syment-stride
fuzz/corpus/macho_structured/: seed_cat  seed_echo  seed_ls
fuzz/corpus/type_parser/: regression-crash-55fb8a29c9e5697d3f32fbcadb8f9328359154d0  soak-2026-06-07-array-len-overflow
fuzz/dictionaries/: elf.dict  macho.dict
fuzz/fuzz_targets/: amdgpu_decoder.rs  arm64_decoder.rs  cache_persistence.rs  cfg_builder.rs  cubin_view.rs  decompiler.rs  dwarf_parser.rs  elf_parser.rs  elf_structured.rs  fatbin_parser.rs  incremental_layout.rs  macho_parser.rs  macho_structured.rs  nv_info_parser.rs  pe_parser.rs  ptx_parser.rs  riscv_decoder.rs  sass_decoder.rs  signature_matcher.rs  type_parser.rs  x86_64_decoder.rs
(+275 files in other folders)
