[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Isaiah"]
license = "MIT"
rust-version = "1.70"

[workspace.dependencies]
# Internal crates
hexray-core = { path = "crates/hexray-core" }
hexray-formats = { path = "crates/hexray-formats" }
hexray-disasm = { path = "crates/hexray-disasm" }
hexray-analysis = { path = "crates/hexray-analysis" }
hexray-demangle = { path = "crates/hexray-demangle" }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Collections
indexmap = ">=2.0, <2.3"  # 2.2.x supports Rust 1.70+

# Parallelism
rayon = "=1.10.0"  # Pin to 1.10.0 for Rust 1.78 compatibility

# Bit manipulation
bitvec = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
pretty_assertions = "1.4"
