[package]
name = "hexray-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hexray-core = { path = "../crates/hexray-core" }
hexray-disasm = { path = "../crates/hexray-disasm", features = ["all-archs"] }
hexray-formats = { path = "../crates/hexray-formats" }
hexray-analysis = { path = "../crates/hexray-analysis" }
hexray-signatures = { path = "../crates/hexray-signatures" }
hexray-types = { path = "../crates/hexray-types" }
arbitrary = { version = "1", features = ["derive"] }
tempfile = "3"

[[bin]]
name = "x86_64_decoder"
path = "fuzz_targets/x86_64_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "arm64_decoder"
path = "fuzz_targets/arm64_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "riscv_decoder"
path = "fuzz_targets/riscv_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "elf_parser"
path = "fuzz_targets/elf_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "macho_parser"
path = "fuzz_targets/macho_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pe_parser"
path = "fuzz_targets/pe_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dwarf_parser"
path = "fuzz_targets/dwarf_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "elf_structured"
path = "fuzz_targets/elf_structured.rs"
test = false
doc = false
bench = false

[[bin]]
name = "macho_structured"
path = "fuzz_targets/macho_structured.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cfg_builder"
path = "fuzz_targets/cfg_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decompiler"
path = "fuzz_targets/decompiler.rs"
test = false
doc = false
bench = false

[[bin]]
name = "signature_matcher"
path = "fuzz_targets/signature_matcher.rs"
test = false
doc = false
bench = false

[[bin]]
name = "type_parser"
path = "fuzz_targets/type_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_persistence"
path = "fuzz_targets/cache_persistence.rs"
test = false
doc = false
bench = false

[[bin]]
name = "incremental_layout"
path = "fuzz_targets/incremental_layout.rs"
test = false
doc = false
bench = false
