[package]
name = "hexray-analysis"
description = "Analysis passes (CFG, function detection) for hexray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hexray-core.workspace = true
hexray-formats.workspace = true
hexray-disasm.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
