[package]
name = "hexray-disasm"
description = "Architecture-specific instruction decoders for hexray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hexray-core.workspace = true
thiserror.workspace = true

[features]
default = ["x86_64"]
x86_64 = []
arm64 = []
riscv = []
# CUDA SASS (NVIDIA GPU) decoder. Volta+ 16-byte fixed-width. In progress —
# see the `feature/gpu-support` branch and the CHANGELOG entries for the
# GPU milestones. Not part of `all-archs` yet because the decoder is still
# skeletal.
cuda = []
all-archs = ["x86_64", "arm64", "riscv"]

[dev-dependencies]
pretty_assertions.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "disassembly"
harness = false
required-features = ["x86_64"]
