[package]
name = "hexray"
description = "A multi-architecture disassembler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "hexray"
path = "src/main.rs"

[dependencies]
hexray-core.workspace = true
hexray-formats.workspace = true
hexray-disasm = { workspace = true, features = ["all-archs"] }
hexray-analysis.workspace = true
hexray-demangle.workspace = true
hexray-types.workspace = true
hexray-signatures.workspace = true
hexray-emulate.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
rustyline.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true

[dev-dependencies]
hexray-core.workspace = true
hexray-formats.workspace = true
hexray-disasm = { workspace = true, features = ["all-archs"] }
hexray-analysis.workspace = true

[[test]]
name = "differential_tests"
path = "tests/differential_tests.rs"
